
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2025 AUG 26a
  * in model/chem/_CO2_Plasma_23s_Park/chem.c
    - added a missing parameter to the functions find_W() and find_dW_dx()
  * in src/data.c
    - in write_data_file_interpolation(), fixed a bug affecting the interpolation in 3D
  * in cycle/ts
    - added _block_ADI_split
    - added _point_implicit
  * in bin
    - added wedge_reacting.wrp
    

2025 JUL 29a
  * in cycle/resconv/_MUSCL/resconv.c
    - in read_disc_resconv_actions(), now set gl->cycle.resconv.CONVJACOBIAN=CONVJACOBIAN_HLL
      for the HLL, HLLC, and HLLC_HYBRID fluxes
  * in cycle/share/ts_share.c
    - added find_dFstar_dUstar_HLL_interface()
    - in add_dFstar_dUstar_to_TDMA() and in find_TDMA_jacobians_conservative() added calls to
      find_dFstar_dUstar_HLL_interface()
  * in cycle/share/ts_share.hh
    - added CONVJACOBIAN_HLL
    

2025 JUL 21a
  * in cycle/resconv/_MUSCL/resconv.c
    - added schemes HLL, HLLC, HLLC_HYBRID
  * in model/fluid/_*/fluid_conv.c
    - added _Pstar_from_jacvars() and _rho_from_jacvars()
    

2025 JUN 13a
  * in model/chem/_NH3_Plasma_32s
    - moved rodriguez2024v3.c to rodriguez2024v4.c
    - copied rodriguez2024v2.c to rodriguez2024v3.c but updated the NH3 townsend ionization reaction
      which had considerable error
      

2025 JUN 09a
  * in model/thermo/_generic/electronimpact.c
    - added _EoverN_from_Te_chieminus_O2()
    - added _EoverN_from_Te_chieminus_NO()
    - in _EoverNk_from_Te_chieminus(), added calls to _EoverN_from_Te_chieminus_O2() and to
      _EoverN_from_Te_chieminus_NO()
      

2025 MAY 13b
  * in model/chem/_NH3_Plasma_32s/arakoni2007omprakas.c
    - added version 12 which corresponds to rodriguezv2
    

2025 MAY 13a