@@ -4,8 +4,8 @@ option   none
 option   explicit
 option   point_implicit
 option   block_ADI
-option   block_ADI_split
+optionX   block_ADI_split
 optionP   block_DDADI
 optionP   block_IMAF
-help     Choose "none" if the cycle strategy was chosen as "Predictor-Corrector". Otherwise, choose "explicit" for first-order explicit Euler pseudotime stepping, "block ADI" for the block implicit ADI scheme, "block DDADI" for the diagonally dominant version of "block ADI" which provides better high frequency wave damping. The scheme "block IMAF" is an iterative "block DDADI" which becomes a direct inversion in the limit of a large number of subiterations (not compatible with MPI). 
+help     Choose "none" if the cycle strategy was chosen as "Predictor-Corrector". Otherwise, choose "explicit" for first-order explicit Euler pseudotime stepping, "point implicit" for only the source terms being treated implicitly, "block ADI" for the block implicit ADI scheme, "block DDADI" for the diagonally dominant version of "block ADI" which provides better high frequency wave damping. The scheme "block IMAF" is an iterative "block DDADI" which becomes a direct inversion in the limit of a large number of subiterations (not compatible with MPI). 
 END
